# Zephyr-Module-Template

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  Kconfig  README.md
drivers/: CMakeLists.txt  Kconfig
drivers/template/: CMakeLists.txt  Kconfig  Kconfig.Template  temp.c
drivers/template_driver/: CMakeLists.txt  Kconfig
drivers/template_driver/template_device/: device.c
dts/bindings/: vendor-prefixes.txt
dts/bindings/zephyr_example_module/: zephyr,template.yaml
include/: Template_API.h
zephyr/: module.yml
